--- a/index.html
+++ b/index.html
@@ -33,11 +33,29 @@
                  <img src="box2.png" width="180px" height="130px">
             <br>
         </center>
-            <a href="https://letmegooglethat.com/?q=best+website">My Favorite Website</a>
         </p>
 
         <p>
-            8/21/23 - This is my second journal entry
+            9/8/2023 - This is my second journal entry
+            <br>
+            1. Write about how your week went
+            <br>
+            My week went good and pretty smooth and it was a pretty fun week because of Engineering.
+            <br>
+            2. Write about what you learned this week
+            <br>
+            I learned how to use a website called tinkercad to create stuff with it and make diagrams of projects that we will do.
+            <br>
+             <img src="Untitled (1).png" width="180px" height="130px">
+             <img src="Untitled.png" width="180px" height="130px">
+             <br>
+            3. Write what your rube goldberg machine will do and what machines you're using
+            <br>
+            Our GoldBerg machine consists of a pully, incline plane, and a lever to get a baseball to eventually pop a balloon with a needle.
+            <br>
+            4. Write what you think will be the most challenging part
+            <br> 
+            I believe that the most defficult part of this challenge will be getting the needle to go fast enough and the right speed to pop the ballon at the end.
         </p>
         
         </p>
