--- a/index.html
+++ b/index.html
@@ -56,7 +56,57 @@
             4. Write what you think will be the most challenging part
             <br> 
             I believe that the most defficult part of this challenge will be getting the needle to go fast enough and the right speed to pop the ballon at the end.
+            <br>
+            9/22/2023
+            <br>
+            1. My week went decent. We had some challenges and my team and I pretty much failed all of them. First we had to make the Goldberg Machine and everything pretty much worked 95% of the time but our pully woudln't work so we techniquely failed that challenge. We did a smaller group challenge where we got a piece of paper and had to make sometime of boat that holds weight up in a bucket of water for 5 minutes. My teammate and I made a actual paper boat but it only lasted 9 seconds in the bucket because we needed to distrupute the weight better than we did and it would have worked better. The last challenged we did was was we had to draw a E with perfect measurements for every side, then we had to give the outline to someone else and they had to make a E with out demensions. Mine didnt really work out because I forgot to put some of the measurements down.
+           <br>
+           My E I made with someone elses dimensions:
+           <br>
+           <video width="900" height="600"controls="" loop="">
+               <source src="PXL_20230918_223111100.TS (1) (1).mp4" type="video/mp4">
+           </video>
+           <br>
+           <img src="PXL_20230920_221218498.jpg" width="180px" height="130px">
+           <br>
+            2. Our GoldBerg Machine worked for most but our pulley and the needle were the problems. The pulley wither would hit the balloon or the needle would miss or not even pop.  It would have been better if we would have reconfigured the pulley system but other than that it was pretty good.
+            <br>
+            3. I think I contributed a lot into the challenge like maked it on tiner cad, measuring, cutting, and acuatlly making it.
+            <br>
+            4. The E I made from some one elses drawing was really good and was almost perfect. But mine wasnt so good because I missed a few measurments.  Our boat was a good idea but didnt play out good.
+            <br>
+            5. We learned a lot about computer engineering like what it ia and how it is used. How the computers cpus work with tthe development of them. It did intrest me and I have helped build my own personal computer at home so I do know a little bit about it.
+            <br>
+        <p>
+        10/13/23
+        <br>
+        1. This week we are starting to learn about Aerospace Engineering and how it works with spaceships, what happens to them when they try to leave Earth or how they land one without crashing it.
+        <br>
+        2. There are 4 forces pulling on a rocket/spaceship when they are flying, the weight of the entire thing pullying it down, Thrust to make it go, lift to keep it into the air, and Drag from the Air Craft moving through the airslowing it down.
+       <br>
+       <img src="Screenshot 2023-10-13 123508.png" width="180px" height="130px">
+       <br>
+       <a href="https://docs.google.com/spreadsheets/d/1GpnENkj2K20PFtGaYaWzwAWJ30VSFHfbSGXh9majqJ8/edit#gid=0">Our BOM List</a>
+       <br>
+       3. One thing that I have liked about this class is that we build things. I have always liked building things and I like having to think hard about something but not having to use actual school things like deep and heavy math and other things like that.  
+       <br>
+       10/20/23
+       <br>
+       1. We learned this week about Aerospace Engineering, we learned about what it takes for a rocket or ship to take off what forces effect the ship when it is in the air. What the peopl eon board the space station do and a little of how they live up there. What things are called that only go inside Earths atmosphere like planes, most rockets, and sattelites. Also what goes outside like space ships and the Space Station
+       <br>
+       2. Our design for our rocket was based off just a normal rocket. We put a cone on the top of it then put a set of 3 wings at the bottom and 2 set of wings at the top. We did run our rocket 3 different times, first time it barely went off the ground, second time it went into the air and spun, and the last time we sent it went super high and curved.
+        <video width="900" height="600"controls="" loop="">
+               <source src="IMG_7097 (1).mov" type="video/mp4">
+           </video>
+        <br>
+        <video width="900" height="600"controls="" loop="">
+               <source src="IMG_7099 (1).mov" type="video/mp4">
+           </video>
+        <br>
+        <video width="900" height="600"controls="" loop="">
+               <source src="IMG_7110 (1).mov" type="video/mp4">
+           </video>
         </p>
         
-        </p>
+        
     </body>
