--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
         <br>
         1. This week we learned about Environmental Engineering which are people who focus on helping the enviornment to make it healthier like going thought a 8 process cycle filtering by using oxygen and chlorine to help filter out the waste. Before that it has to go through large poles to stop big objects from goign through it. That happens a few time but it trys to get the smaller objects.
         <br>
-        <img src="filter.jpeg" width="280px" height="230px">
-        <img src="Start dirty.jpeg" width="280px" height="230px">
-        <img src="1st attepmt.jpeg" width="280px" height="230px">
-        <img src="2nd temp.jpeg.jpeg" width="280px" height="230px">
-        <img src="last.jpeg" width="280px" height="230px">
+        <img src="filter.jpeg" width="280px" height="280px">
+        <img src="Start dirty.jpeg" width="280px" height="280px">
+        <img src="1st attepmt.jpeg" width="280px" height="280px">
+        <img src="2nd temp.jpeg" width="280px" height="280px">
+        <img src="last.jpeg" width="280px" height="280px">
         <br>
         2. The water filter works by starting at the top with big rocks to get the bigger things stuck, it goes to smaller rocks then even smaller then ends with cotton balls to get ride of any debre and clear it up.
         <br>
