--- a/Semester2.html
+++ b/Semester2.html
@@ -22,7 +22,14 @@
           <img src="oobleck 1.jpg" width="180px" height="130px">
           <img src="OObleck 2.jpg" width="180px" height="130px">
           <img src="oobleck 3.jpg" width="180px" height="130px">
-          <img src="dj backshots.jpg" width="220px" height="150px">
+          <img src="dj backshots.jpg" width="220px" height="200px">
+          <br>
+          We are starting the proccess of making a Arduino Car, we eventually will have to build the machine from our CAD. We have already made and connected our circuit board digitally but we will have to do that same thing to make the car move. We will have to code to move the car too any way we want to.
+          <br>
+          <img src="Screenshot 2024-01-26 145820.png" width="200px" height="180px">
+          <img src="Screenshot 2024-01-26 145705.png" width="200px" height="180px">
+          <br>
+          This next week were preparing to finalize the code and start creating the mini machine and make it drive.
     </body>
     
     
