--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
     <body bgcolor="#32a89b">
         <center>
-           <marquee><h1><b></b>Nicholas' Website</h1></marquee>
+           <marquee><h1><b></b>Nicholas' Website Semester 1</h1></marquee>
             <img src="Untitled design.jpg" width="330px" height="210px">
         </center>
 
         <hr><br><br>
-
+        <a href="Semester2.html" style="font-size:25px;">Semester 2</a>
         <p>
             9/1/23 - This is my first journal entry!
             <br>
