--- a/Semester2.html
+++ b/Semester2.html
@@ -108,6 +108,15 @@
           My favorite parts of this class is acutally building stuff and programing it to do something, then watching it work or even fail. Thats half the part of building something.
           <br>
           This weekend im not gonna do much just hang out with friends.
+          <br>
+          The most recent project that we have started is building a boat. We have to make a big boat that fits two people in it and it has to get across the poole and back. We are going to test it at the end of the year on the final day which means this is our final project.
+          <br>
+          Last week we did a challenge where we had 20 post-it notes and we had make the longest bridge with it only using the post-it notes to hold it up. Me an and partner made the longest one in the class at 19.5ft long.
+          <br>
+          <img src="Screenshot 2024-04-15 3.05.32 PM.png" width="285px" height="200px">
+           <img src="unnamed.jpg" width="225px" height="232px">
+          <br>
+          Im looking forward to just not being at school and doing whatever.
           
           
           </body>
